--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <style>
         body{
+            justify-content:center;
             background-color: violet;
             align-items: center;
         }
@@ -19,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
